tests/negative/parser/missing_brace.orng
// missing_brace.orng:7:21: error: expected closing `}` to match opening `{` here, got `(EOF)`
//                    ^
// missing_brace.orng:7:19: note: opening `{` here:
// fn main() -> Int {0
//                  ^
// 
fn main() -> Int {0